--- a/assets/style.css
+++ b/assets/style.css
@@ -17,13 +17,16 @@
   height: 700px;
 }
 
-/* my name */
+/* my name on opening image */
 .text {
   background-color: rgba(255, 255, 255, 0.847);
   color: black;
-  font-size: 7vw; /* Responsive font size */
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  font-size: 5vw; /* Responsive font size */
+  letter-spacing: 1px;
   margin: 0 auto; 
-  padding: 10px;
+  padding: 30px;
   text-align: center; 
   position: absolute; 
   top: 50%; 
@@ -33,46 +36,114 @@
   mix-blend-mode: screen; /* This makes the cutout text possible */
 }
 
+/* nav bar fonts */
+.nav-link {
+  font-family: 'Open Sans', sans-serif;
+}
+
 /* styling of each section */
-.container {
+/* .container {
   padding: 50px;
   padding-left: 100px;
   padding-right: 100px;
-}
+} */
 
 /* title of each section */
 #title {
   text-align: center;
+  margin-bottom: 20px;
+  font-family: 'Merriweather', serif;
+  font-size: 40px;
+  letter-spacing: 2px;
+}
+
+hr {
   margin-bottom: 50px;
+}
+
+/* font family */
+p {
+  font-family: 'Open Sans', sans-serif;
+}
+
+/* each section stylizing */
+#about {
+  background-color: rgba(208, 192, 157, 0.541);
+  padding: 50px;
+  padding-left: 150px;
+  padding-right: 150px;
+}
+#webPage {
+  background-color: rgba(176, 187, 137, 0.555);
+  padding: 50px;
+  padding-left: 150px;
+  padding-right: 150px;
+}
+#artPage {
+  background-color: rgba(216, 213, 201, 0.548);
+  padding: 50px;
+  padding-left: 150px;
+  padding-right: 150px;
+}
+#contactPage {
+  background-color: rgba(126, 153, 111, 0.534);
+  padding: 50px;
+  padding-left: 150px;
+  padding-right: 150px;
 }
 
 /* cards */
 .cards {
   margin-bottom: 50px;
 }
-.card-title {
-  text-align: center;
-}
-.card-text {
-  text-align:center;
-}
 #cardbutton {
+  background-color: white;
+  color: black;
 }
 
-/* skills */
+/* skills div */
 #skills {
   text-align: center;
   margin-bottom: 20px;
 }
 
-/* art portfolio */
+/* art portfolio div */
 #photo {
   margin-bottom: 20px;
   text-align: center;
 }
 .carousel{
   margin-bottom: 50px;
+  /* MAKE THIS SMALLER */
+}
+#carouseltext {
+  color: black;
 }
 #dance {
   text-align: center;
+  margin-bottom: 20px;
+}
+.youtube {
+  /* ALIGN CENTER */
+}
+#dance {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+/* contact div */
+#contactPage {
+  text-align: center;
+}
+#contactInfo {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+}
+#contactlink {
+  color: darkolivegreen;
+}
+
+.page-footer {
+  background-color: black;
+  color: white;
 }
