--- a/assets/style.css
+++ b/assets/style.css
@@ -171,14 +171,24 @@ p {
   letter-spacing: 1.2px;
   color: #6D5D49;
 }
-iframe {
-  display: block;
-  margin: 0 auto;
+.video-container  {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+  margin-bottom: 10px;
+}
+.video-container  iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 #youtubetext {
   font-size: 17px;
   font-family: 'Open Sans', sans-serif;
-  margin-bottom: 30px;
+  margin-bottom: 35px;
   color: #36281c;
   text-align: center;
 }
