--- a/assets/style.css
+++ b/assets/style.css
@@ -27,7 +27,7 @@
   mix-blend-mode: screen; /* This makes the cutout text possible */
 }
 
-/* nav bar fonts */
+/* nav bar text */
 .nav-link {
   font-family: 'Playfair Display', serif;
   color: darkolivegreen;
@@ -43,6 +43,7 @@
 }
 #spanid {
   color: darkolivegreen;
+  font-family: 'Playfair Display', serif;
 }
 .sticky {
   position: fixed;
@@ -62,7 +63,7 @@
 }
 
 hr {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 /* font family */
@@ -176,15 +177,7 @@ p {
 /* art portfolio div */
 * { box-sizing: border-box; }
 
-/* body {
-  font-family: sans-serif;
-} */
-
 /* ---- isotope ---- */
-
-/* .grid {
-  border: 1px solid #333;
-} */
 
 /* clear fix */
 .grid:after {
@@ -192,169 +185,50 @@ p {
   display: block;
   clear: both;
 }
-
-/* ---- .element-item ---- */
-
 .element-item {
   position: relative;
   float: left;
-  width: 100px;
-  height: 100px;
+  width: 300px;
+  height: auto;
   margin: 5px;
-  padding: 10px;
-  /* background: #888; */
-  color: #262524;
+  padding: 5px;
 }
-
 .element-item > * {
   margin: 0;
-  padding: 0;
+  padding: 0px;
 }
 
-.element-item .name {
-  position: absolute;
-
-  left: 10px;
-  top: 60px;
-  text-transform: none;
-  letter-spacing: 0;
-  font-size: 12px;
-  font-weight: normal;
-}
-
-.element-item .symbol {
-  position: absolute;
-  left: 10px;
-  top: 0px;
-  font-size: 42px;
-  font-weight: bold;
-  color: white;
-}
-
-.element-item .number {
-  position: absolute;
-  right: 8px;
-  top: 5px;
-}
-
-.element-item .weight {
-  position: absolute;
-  left: 10px;
-  top: 76px;
-  font-size: 12px;
-}
-
-/* #photo {
+#youtube {
   margin-bottom: 20px;
-  text-align: center;
-  font-size: 30px;
-  letter-spacing: 1.2px;
-  color: #6D5D49;
-  font-family: 'Frank Ruhl Libre', serif;
-  align-content: center;
 }
-.carousel {
-  margin-bottom: 50px;  
-}
-#carouseltext {
-  color: black;
-  font-family: 'Frank Ruhl Libre', serif;
-}
-#dance {
-  text-align: center;
-  margin-bottom: 20px;
-  letter-spacing: 1.2px;
-  color: #6D5D49;
-  font-family: 'Frank Ruhl Libre', serif;
-}
-.video-container  {
-  position: relative;
-  padding-bottom: 56.25%; 
-  padding-top: 25px;
-  height: 0;
-  margin-bottom: 10px;
-}
-.video-container  iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-#youtubetext {
-  font-size: 17px;
-  font-family: 'Frank Ruhl Libre', serif;
-  margin-bottom: 35px;
-  color: #36281c;
-  text-align: center;
-}
-#dance {
-  margin-bottom: 20px;
-  text-align: center;
-  font-family: 'Frank Ruhl Libre', serif;
-} */
 
 /* contact div */
-/* #contact {
-  background: #f9f9f9;
-  text-align: center;
-}
-#contact .fa {
-  font-size: 40px;
-}
-#contact form {
-  padding-top: 80px;
-}
-#contact .form-control {
-  border-radius: 0;
-  box-shadow: none;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  transition: all 0.4s ease-in-out;
-}
-#contact .form-control:focus {
-  border: 2px solid #808080;
-}
-#contact input {
-  height: 50px;
-}
-#contact input[type="submit"] {
-  border: 2px solid #808080;
-  margin-top: 18px;
-  height: 54px;
-}
-#contact input[type="submit"]:hover {
-  background: #808080;
-  color: #ffffff;
-}
-#contact textarea {
-  height: 170px;
-}
-.contact-info-box h3 { font-size: 16px; } */
-
 #contactPage {
   text-align: center;
 }
-#contactInfo {
-  font-family: 'Frank Ruhl Libre', serif;
-  font-size: 18px;
-  color: #493829;
+#contacticon {
+ margin-bottom: 5px;
 }
-#contacttitle {
+.contact {
   font-family: 'Frank Ruhl Libre', serif;
-  font-size: 22px;
-  margin-bottom: 3px;
-  color:  #492d15;
+  margin-bottom: 30px;
+  color: #31261c;
+}
+.contacttext {
+  font-family: 'Frank Ruhl Libre', serif;
 }
 #contactlink {
-  color: darkolivegreen;
+  color:black;
+  font-family: 'Frank Ruhl Libre', serif;
 }
 #contactlink a:hover {
   text-decoration: underline;
+  color: darkolivegreen;
 }
 
 /* footer */
 .page-footer {
   background-color: black;
   color: white;
+  font-family: 'Frank Ruhl Libre', serif;
 }
