--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,3 @@
-/* CAN THESE TWO BE COMBINED??!?!?!!?
-
 /* opening image */
 .image-container {
   background-image: url("../images/Rain032.jpg");
@@ -75,8 +73,8 @@ p {
 #about {
   background-color: rgba(208, 192, 157, 0.541);
   padding: 50px;
-  padding-left: 150px;
-  padding-right: 150px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 #summary {
   font-family: 'Frank Ruhl Libre', serif;
@@ -87,117 +85,62 @@ p {
 #webPage {
   background-color: rgba(176, 187, 137, 0.555);
   padding: 50px;
-  padding-left: 150px;
-  padding-right: 150px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 #artPage {
   background-color: rgba(216, 213, 201, 0.548);
   padding: 50px;
-  padding-left: 150px;
-  padding-right: 150px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 #contactPage {
   background-color: rgba(126, 153, 111, 0.534);
   padding: 50px;
-  padding-left: 150px;
-  padding-right: 150px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 /* cards */
-.cards {
-  margin-bottom: 50px;
-  border-radius: 25px;
-}
-.card-title {
-  color:  #31261c;
-}
-.card-text {
-  color:  #31261c;
-}
 #cardbutton {
-  background-color: white;
-  color: #31261c;
+  background-color: #31261c;
+  border-color: #31261c;
+  color: white;
 }
-.btn-primary {
-  border-color: black;
+#projectcards {
+  margin-bottom: 40px;
+  align-content: center;
+  text-align: center;
 }
-.btn-primary:hover {
-  border-color: black;
+.zoom {
+  padding: 50px;
+  /* background-color: green; */
+  transition: transform .2s;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
 }
-#card-img-top:hover {
-  animation: shake 3s;
-  animation-iteration-count: 0.5s;
+.zoom:hover {
+  -ms-transform: scale(1.1); /* IE 9 */
+  -webkit-transform: scale(1.1); /* Safari 3-8 */
+  transform: scale(1.1); 
 }
-
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-
 
 /* skills div */
 #skills {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   letter-spacing: 1.2px;
   color: #6D5D49;
-  font-family: 'Frank Ruhl Libre', serif;
+  font-family: 'Playfair Display', serif;
 }
-/* Make sure that padding behaves as expected */
-* {box-sizing:border-box}
-
-/* Container for skill bars */
-/* .container {
-  width: 100%; 
-  background-color: white; 
-} */
-
-.skills {
-  text-align: right; /* Right-align text */
-  padding-top: 10px; /* Add top padding */
-  padding-bottom: 10px; /* Add bottom padding */
-  color: white; /* White text color */
+.contacttext {
+  font-family: 'Playfair Display', serif;
+  margin-top: 5px;
 }
-.html {width: 90%; background-color: #808080;}
-.css {width: 90%; background-color: #808080;}
-.mysql {width: 70%; background-color: #808080;}
-.js {width: 60%; background-color: #808080;}
-.node {width: 60%; background-color: #808080;}
 
 
 /* art portfolio div */
-* { box-sizing: border-box; }
-
-/* ---- isotope ---- */
-
-/* clear fix */
-.grid:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-.element-item {
-  position: relative;
-  float: left;
-  width: 300px;
-  height: auto;
-  margin: 5px;
-  padding: 5px;
-}
-.element-item > * {
-  margin: 0;
-  padding: 0px;
-}
-
 #youtube {
   margin-bottom: 20px;
 }
