--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,7 @@
 #spanid {
   color: darkolivegreen;
   font-family: 'Playfair Display', serif;
+  float: right;
 }
 .sticky {
   position: fixed;
@@ -113,32 +114,41 @@ p {
   text-align: center;
 }
 .zoom {
-  padding: 50px;
-  /* background-color: green; */
+  padding: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
   transition: transform .2s;
   width: 200px;
   height: 200px;
   margin: 0 auto;
 }
 .zoom:hover {
-  -ms-transform: scale(1.1); /* IE 9 */
-  -webkit-transform: scale(1.1); /* Safari 3-8 */
+  -ms-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
   transform: scale(1.1); 
 }
-
+.card-img-top {
+  width: 100%;
+  height: 12vw;
+  object-fit: cover;
+}
 /* skills div */
 #skills {
   text-align: center;
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   letter-spacing: 1.1px;
   color: #6D5D49;
   font-family: 'Playfair Display', serif;
   font-weight: bold;
+  font-size: 30px;
 }
 .contacttext {
   font-family: 'Playfair Display', serif;
   margin-top: 5px;
+}
+#skillsrowone {
+  margin-bottom: 30px;
 }
 #skillsrow {
   margin-bottom: 30px;
@@ -167,9 +177,13 @@ p {
   font-family: 'Frank Ruhl Libre', serif;
   margin-bottom: 30px;
   color: #31261c;
+  font-size: 18px;
 }
 .contacttext {
   font-family: 'Frank Ruhl Libre', serif;
+}
+.contactrowone {
+  margin-bottom: 30px;
 }
 #contactlink {
   color:black;
@@ -185,4 +199,44 @@ p {
   background-color: black;
   color: white;
   font-family: 'Frank Ruhl Libre', serif;
+}
+
+/* MEDIA QUERIES */
+@media only screen and (max-width: 768px) {
+  .image-container {
+    background-image: url("../images/Rain032.jpg");
+    background-size: cover; 
+    position: relative; /* Needed to position the cutout text in the middle of the image */
+    height: 600px;
+  }
+  .text {
+    background-color: rgba(255, 255, 255, 0.847);
+    color: black;
+    font-family: 'Playfair Display', serif;
+    /* font-weight: bold; */
+    font-size: 8vw; /* Responsive font size */
+    letter-spacing: 1px;
+    margin: 0 auto; 
+    padding: 30px;
+    text-align: center; 
+    position: absolute; 
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%); /* Position text in the middle */
+    mix-blend-mode: screen; /* This makes the cutout text possible */
+  }
+  .zoom {
+    padding: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    transition: transform .2s;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+  }
+  .card-img-top {
+    width: 100%;
+    height: 30vw;
+    object-fit: cover;
+  }
 }
