--- a/assets/style.css
+++ b/assets/style.css
@@ -35,6 +35,7 @@
 }
 .navbar-nav{
   color: darkolivegreen;
+  margin-bottom: 0px;
 }
 #home{
   color: darkolivegreen;
@@ -49,6 +50,9 @@
   top: 0;
   width: 100%;
   z-index: 99;
+}
+.navbar {
+  margin-bottom: 0px;
 }
 
 /* title of each section */
@@ -115,10 +119,10 @@ p {
 }
 .zoom {
   padding: 30px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 0px;
+  padding-right: 0px;
   transition: transform .2s;
-  width: 200px;
+  width: 280px;
   height: 200px;
   margin: 0 auto;
 }
@@ -159,12 +163,11 @@ p {
 #photoone {
   margin-bottom: 20px;
 }
-.youtube {
+.youTube {
+  margin-left: 16%;
   margin-top: 40px;
 }
-#youtube{
-  margin-bottom: 40px;
-}
+
 
 /* contact div */
 #contactPage {
@@ -233,6 +236,31 @@ p {
     width: 200px;
     height: 200px;
     margin: 0 auto;
+  }
+  #about {
+    padding: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  #webPage {
+    padding: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  #skills {
+    padding-left: 0px;
+    padding-right: 0px;
+
+  }
+  #artPage {
+    padding: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  #contactPage {
+    padding: 50px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
   .card-img-top {
     width: 100%;
