--- a/assets/style.css
+++ b/assets/style.css
@@ -262,6 +262,12 @@ p {
     padding-left: 0px;
     padding-right: 0px;
   }
+  .contacttext {
+    text-align: center;
+  }
+  #row1 {
+    margin-left: 60px;
+  }
   .card-img-top {
     width: 100%;
     height: 30vw;
