--- a/assets/style.css
+++ b/assets/style.css
@@ -256,6 +256,12 @@ p {
     padding-left: 20px;
     padding-right: 20px;
   }
+  #photoone {
+    margin-left: 30px;
+  }
+  #phototwo {
+    margin-left: 30px;
+  }
   #contactPage {
     padding: 50px;
     padding-left: 0px;
