--- a/assets/style.css
+++ b/assets/style.css
@@ -74,6 +74,18 @@ p {
   font-family: 'Frank Ruhl Libre', serif;
 }
 
+.headshot {
+  height: 200px;
+  width: auto;
+  transition: filter .8s ease-in-out;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%); /* FF 35+ */
+}
+.headshot:hover {
+  -webkit-filter: grayscale(0%); /* Ch 23+, Saf 6.0+, BB 10.0+ */
+  filter: grayscale(0%); /* FF 35+ */
+}
+
 /* each section stylizing */
 #about {
   background-color: rgba(208, 192, 157, 0.541);
@@ -92,6 +104,19 @@ p {
   padding: 50px;
   padding-left: 100px;
   padding-right: 100px;
+}
+.parallax { 
+  /* The image used */
+  background-image: url("../images/nature1.jpeg");
+
+  /* Set a specific height */
+  height: 300px; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 #artPage {
   background-color: rgba(216, 213, 201, 0.548);
@@ -205,7 +230,7 @@ p {
 }
 
 /* MEDIA QUERIES */
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 415px) and (max-width: 768px) {
   .image-container {
     background-image: url("../images/Rain032.jpg");
     background-size: cover; 
@@ -242,6 +267,14 @@ p {
     padding-left: 50px;
     padding-right: 50px;
   }
+  .headshot {
+    height: 200px;
+    width: auto;
+    margin: 0 auto;
+    margin-left: 200px;
+    margin-top: 20px;
+    
+  }
   #webPage {
     padding: 50px;
     padding-left: 50px;
@@ -269,6 +302,92 @@ p {
   }
   .contacttext {
     text-align: center;
+  }
+  #contactrowone{
+    margin-bottom: 20px;
+  }
+  #row1 {
+    margin-left: 30px;
+  }
+  .card-img-top {
+    width: 100%;
+    height: 30vw;
+    object-fit: cover;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  .image-container {
+    background-image: url("../images/Rain032.jpg");
+    background-size: cover; 
+    position: relative; /* Needed to position the cutout text in the middle of the image */
+    height: 600px;
+  }
+  .text {
+    background-color: rgba(255, 255, 255, 0.847);
+    color: black;
+    font-family: 'Playfair Display', serif;
+    /* font-weight: bold; */
+    font-size: 8vw; /* Responsive font size */
+    letter-spacing: 1px;
+    margin: 0 auto; 
+    padding: 30px;
+    text-align: center; 
+    position: absolute; 
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%); /* Position text in the middle */
+    mix-blend-mode: screen; /* This makes the cutout text possible */
+  }
+  .zoom {
+    padding: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    transition: transform .2s;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+  }
+  #about {
+    padding: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .headshot {
+    height: 200px;
+    width: auto;
+    margin-top: 20px;
+  }
+  #webPage {
+    padding: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  #skills {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  #artPage {
+    padding: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  #photoone {
+    margin-left: 30px;
+  }
+  #phototwo {
+    margin-left: 30px;
+  }
+  #contactPage {
+    padding: 50px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .contacttext {
+    text-align: center;
+  }
+  #contactrowone {
+    margin: 0 auto;
   }
   #row1 {
     margin-left: 60px;
