--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,9 @@
   top: 50%; 
   left: 60%;
   /* add mobile response to change to 50% at certain width of phone !!!!!! */
-  transform: translate(-50%, -50%); /* Position text in the middle */
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); /* Position text in the middle */
   mix-blend-mode: screen; /* This makes the cutout text possible */
 }
 
@@ -77,11 +79,17 @@ p {
 }
 
 .headshot {
+  max-width: none;
   height: 220px;
   width: auto;
+  -webkit-transition: -webkit-filter .8s ease-in-out;
+  transition: -webkit-filter .8s ease-in-out;
+  -o-transition: filter .8s ease-in-out;
   transition: filter .8s ease-in-out;
+  transition: filter .8s ease-in-out, -webkit-filter .8s ease-in-out;
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%); /* FF 35+ */
+  flex-wrap: wrap;
 }
 .headshot:hover {
   -webkit-filter: grayscale(0%); /* Ch 23+, Saf 6.0+, BB 10.0+ */
@@ -141,19 +149,22 @@ p {
 }
 #projectcards {
   margin-bottom: 40px;
-  align-content: center;
   text-align: center;
+  margin-left: 40px;
 }
 #projectcards2 {
   margin-bottom: 40px;
-  align-content: center;
   text-align: center;
 }
 .zoom {
   padding: 30px;
   padding-left: 0px;
   padding-right: 0px;
+  -webkit-transition: -webkit-transform .2s;
+  transition: -webkit-transform .2s;
+  -o-transition: transform .2s;
   transition: transform .2s;
+  transition: transform .2s, -webkit-transform .2s;
   width: 280px;
   height: 200px;
   margin: 0 auto;
@@ -166,9 +177,13 @@ p {
 .card-img-top {
   width: 100%;
   height: 12vw;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 /* skills div */
+.container {
+  flex-wrap: nowrap;
+}
 #skills {
   text-align: center;
   margin-top: 30px;
@@ -257,14 +272,20 @@ p {
     position: absolute; 
     top: 50%; 
     left: 50%;
-    transform: translate(-50%, -50%); /* Position text in the middle */
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); /* Position text in the middle */
     mix-blend-mode: screen; /* This makes the cutout text possible */
   }
   .zoom {
     padding: 40px;
     padding-left: 20px;
     padding-right: 20px;
+    -webkit-transition: -webkit-transform .2s;
+    transition: -webkit-transform .2s;
+    -o-transition: transform .2s;
     transition: transform .2s;
+    transition: transform .2s, -webkit-transform .2s;
     width: 200px;
     height: 200px;
     margin: 0 auto;
@@ -319,7 +340,8 @@ p {
   .card-img-top {
     width: 100%;
     height: 30vw;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 
@@ -343,14 +365,20 @@ p {
     position: absolute; 
     top: 50%; 
     left: 50%;
-    transform: translate(-50%, -50%); /* Position text in the middle */
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); /* Position text in the middle */
     mix-blend-mode: screen; /* This makes the cutout text possible */
   }
   .zoom {
     padding: 40px;
     padding-left: 20px;
     padding-right: 20px;
+    -webkit-transition: -webkit-transform .2s;
+    transition: -webkit-transform .2s;
+    -o-transition: transform .2s;
     transition: transform .2s;
+    transition: transform .2s, -webkit-transform .2s;
     width: 200px;
     height: 200px;
     margin: 0 auto;
@@ -402,6 +430,7 @@ p {
   .card-img-top {
     width: 100%;
     height: 30vw;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
