--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-/* opening image */
+/* IMAGE  */
 .image-container {
   background-image: url("../images/Rain032.jpg");
   background-size: cover; 
@@ -6,7 +6,7 @@
   height: 700px;
 }
 
-/* my name on opening image */
+/* NAME */
 .text {
   background-color: rgba(255, 255, 255, 0.847);
   color: black;
@@ -27,7 +27,7 @@
   mix-blend-mode: screen; /* This makes the cutout text possible */
 }
 
-/* nav bar text */
+/* NAVBAR */
 .nav-link {
   font-family: 'Playfair Display', serif;
   color: darkolivegreen;
@@ -59,7 +59,7 @@
   margin-bottom: 0px;
 }
 
-/* title of each section */
+/* SECTION TITLES */
 #title {
   text-align: center;
   margin-bottom: 20px;
@@ -69,15 +69,17 @@
   color: #575C33;
 }
 
+/* LINE */
 hr {
   margin-bottom: 20px;
 }
 
-/* font family */
+/* FONT */
 p {
   font-family: 'Frank Ruhl Libre', serif;
 }
 
+ /* HEADSHOT */
 .headshot {
   height: 220px;
   width: auto;
@@ -87,15 +89,15 @@ p {
   transition: filter .8s ease-in-out;
   transition: filter .8s ease-in-out, -webkit-filter .8s ease-in-out;
   -webkit-filter: grayscale(100%);
-  filter: grayscale(100%); /* FF 35+ */
+  filter: grayscale(100%);
   flex-wrap: wrap;
 }
 .headshot:hover {
-  -webkit-filter: grayscale(0%); /* Ch 23+, Saf 6.0+, BB 10.0+ */
-  filter: grayscale(0%); /* FF 35+ */
+  -webkit-filter: grayscale(0%);
+  filter: grayscale(0%);
 }
 
-/* each section stylizing */
+/* STYLING PER SECTION */
 #about {
   background-color: rgba(208, 192, 157, 0.541);
   padding: 50px;
@@ -107,8 +109,8 @@ p {
   text-align: justify;
   font-size: 17px;
   color: #31261c;
-  display: -webkit-flex; /* Safari */
-  -webkit-flex-wrap: wrap; /* Safari 6.1+ */
+  display: -webkit-flex; 
+  -webkit-flex-wrap: wrap; 
   display: flex;
   flex-wrap: wrap;
   padding-top: 30px;
@@ -161,7 +163,7 @@ p {
   padding-right: 100px;
 }
 
-/* cards */
+/* PROJECT CARDS */
 #cardbutton {
   background-color: #31261c;
   border-color: #31261c;
@@ -200,13 +202,14 @@ p {
   -o-object-fit: cover;
      object-fit: cover;
 }
-/* skills div */
-.skill {
+
+/* SKILLS */
+/* .skill {
 align-content: center;
 }
 .skills {
-  -webkit-column-count: 3; /* Old Chrome, Safari and Opera */
-  -moz-column-count: 3; /* Old Firefox */
+  -webkit-column-count: 3; 
+  -moz-column-count: 3;
   column-count: 6;
 }
 .skillicons {
@@ -222,14 +225,49 @@ align-content: center;
   font-family: 'Playfair Display', serif;
   font-weight: bold;
   font-size: 30px;
-}
-/* .contacttext {
-  font-family: 'Playfair Display', serif;
-  margin-top: 5px;
 } */
+.skill {
+  padding: 50px 100px 0px 100px;
+}
+#skills {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  letter-spacing: 1.1px;
+  color: #6D5D49;
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
+  font-size: 30px;
+}
+.skills1 {
+  text-align: center;
+  margin-top: 30px;
+  letter-spacing: 1.1px;
+  color: #6D5D49;
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+.line2 {
+  width: 40%;
+  background-color: #575C33 !important;
+  height: 1px !important;
+  border-top: none;
+  margin-bottom: 30px;
+}
+.skills2 {
+  font-family: 'Frank Ruhl Libre', serif;
+  padding: 0px 40px 0px 40px;
+  font-size: 20px;
+  text-align: center;
+  color: #575C33;
+  margin-bottom: 100px;
+  letter-spacing: .8px;
+}
 
 
-/* art portfolio div */
+/* ART */
 #photoone {
   margin-bottom: 20px;
   margin-left: 10%;
@@ -242,7 +280,7 @@ align-content: center;
   margin-top: 40px;
 }
 
-/* contact div */
+/* CONTACT */
 #contactPage {
   text-align: center;
   font-family: 'Frank Ruhl Libre', serif;
@@ -256,18 +294,16 @@ align-content: center;
   font-family: 'Alegreya', serif;
 }
 .fab {
-  font-size: 35px;
+  font-size: 33px;
   margin-bottom: 10px;
+}
+#fab2 {
+  font-size: 33px;
+  margin-bottom: 10px;
+  margin-top: 20px;
 }
 .fas {
   font-size: 30px;
-}
-.contacttext2 {
-  font-family: 'Frank Ruhl Libre', serif;
-  margin-bottom: 30px;
-  margin-top: 10px;
-  text-decoration: none;
-  color: rgb(14, 46, 2);
 }
 .contacttext {
   font-family: 'Frank Ruhl Libre', serif;
@@ -279,6 +315,21 @@ align-content: center;
 .contacttext:hover {
   color: white;
 }
+.contacttext2 {
+  font-family: 'Frank Ruhl Libre', serif;
+  margin-bottom: 30px;
+  margin-top: 10px;
+  text-decoration: none;
+  color: rgb(14, 46, 2);
+}
+.contacttext3 {
+  font-family: 'Frank Ruhl Libre', serif;
+  margin-bottom: 30px;
+  margin-top: 10px;
+  text-decoration: none;
+  color: rgb(14, 46, 2);
+  text-transform: uppercase;
+}
 .linktext {
   font-family: 'Frank Ruhl Libre', serif;
 }
@@ -289,7 +340,7 @@ align-content: center;
   border-top: none;
 }
 
-/* footer */
+/* FOOTER */
 .page-footer {
   background-color: black;
   color: white;
@@ -323,30 +374,22 @@ align-content: center;
             transform: translate(-50%, -50%); /* Position text in the middle */
     mix-blend-mode: screen; /* This makes the cutout text possible */
   }
-  .zoom {
-    padding: 40px;
-    padding-left: 20px;
-    padding-right: 20px;
-    -webkit-transition: -webkit-transform .2s;
-    transition: -webkit-transform .2s;
-    -o-transition: transform .2s;
-    transition: transform .2s;
-    transition: transform .2s, -webkit-transform .2s;
-    width: 200px;
-    height: 200px;
-    margin: 0 auto;
-  }
+  /* BIO */
   #about {
     padding: 50px;
     padding-left: 50px;
     padding-right: 50px;
   }
   .headshot {
-    height: 200px;
+    height: 190px;
     width: auto;
-    margin: 0 auto;
     margin-top: 20px;
   }
+  .button {
+    margin-left: 15%;
+    width: 180px;
+  }
+  /* PROJECTS AND SKILLS */
   #webPage {
     padding: 50px;
     padding-left: 50px;
@@ -354,72 +397,30 @@ align-content: center;
   }
   #projectcards {
     margin: auto;
+    text-align: center;
+    width: 100%;
+  }
+  #projectcards2 {
+    margin: auto;
     margin-bottom: 40px;
     text-align: center;
     width: 100%;
   }
-  #skills {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  #artPage {
-    padding: 50px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  #photoone {
-    margin-left: 30px;
-  }
-  #phototwo {
-    margin-left: 30px;
-  }
-  #contactPage {
-    padding: 50px;
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  .contacttext {
-    text-align: center;
-  }
-  #contactrowone{ 
-    margin-bottom: 20px;
-  }
-  #row1 {
-    margin-left: 30px;
-  }
   .card-img-top {
-    width: 100%;
-    height: 30vw;
-    -o-object-fit: cover;
-       object-fit: cover;
+    height: 40vw;
+    width: 160px;
+    padding: 0x;
   }
-}
-
-@media only screen and (max-width: 414px) {
-  .image-container {
-    background-image: url("../images/Rain032.jpg");
-    background-size: cover; 
-    position: relative; /* Needed to position the cutout text in the middle of the image */
-    height: 600px;
-  }
-  .text {
-    background-color: rgba(255, 255, 255, 0.847);
-    color: black;
-    font-family: 'Playfair Display', serif;
-    /* font-weight: bold; */
-    font-size: 8vw; /* Responsive font size */
-    letter-spacing: 1px;
-    margin: 0 auto; 
-    padding: 30px;
-    text-align: center; 
-    position: absolute; 
-    top: 50%; 
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%); /* Position text in the middle */
-    mix-blend-mode: screen; /* This makes the cutout text possible */
-  }
+  /* #contactrowone{ 
+    margin-bottom: 20px;
+  } */
+  /* #row1 {
+    margin-left: 30px;
+  } */
+  /* #skills {
+    padding-left: 0px;
+    padding-right: 0px;
+  } */
   .zoom {
     padding: 40px;
     padding-left: 20px;
@@ -433,39 +434,36 @@ align-content: center;
     height: 200px;
     margin: 0 auto;
   }
-  #about {
-    padding: 50px;
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-  .headshot {
-    height: 200px;
-    width: auto;
-    margin-top: 20px;
-  }
-  #webPage {
-    padding: 50px;
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-  #skills {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  #artPage {
-    padding: 50px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  /* .col-xs-12 {
-    margin-bottom: 10px;
-  } */
+  .skill {
+    padding-left: 60px;
+    padding-right: 60px
+    }
+  .skills2 {
+    margin-bottom: 20px;
+    font-size: 20px;
+    }
+  /* ART PAGE */
   #photoone {
     margin-left: 0px;
   }
   #phototwo {
     margin-left: 0px;
   }
+  #artPage {
+    padding: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+ .d-inline-block {
+   margin-bottom: 10px;
+ }
+ /* #dancing {
+   width: 300px;
+   height: auto;
+   padding-right: 70px;
+   margin-bottom: 50px;
+ } */
+ /* CONTACT PAGE */
   #contactPage {
     padding: 50px;
     padding-left: 15px;
@@ -475,7 +473,7 @@ align-content: center;
     text-align: center;
     font-size: 12px;
   }
-  #contacticon1{
+  /* #contacticon1{
     margin-left: 30px;
   }
   #contacticon2 {
@@ -487,18 +485,5 @@ align-content: center;
   }
   #row1 {
     margin-left: 60px;
-  }
-  .card-img-top {
-    width: 100%;
-    height: 30vw;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .skill {
-    padding-left: 60px;
-    padding-right: 60px
-    }
-  .col {
-    margin-bottom: 20px;
-  }
+  } */
 }
